--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -15,113 +15,11 @@ $search-bar-margin: 65px;
 // Include all components
 @include react-md-everything;
 
-html {
-    background-color: #fff;
-    overflow-x: hidden;
-}
-
-a {
-    -webkit-appearance: none !important;
-
-    &:hover {
-        color: #fff;
-    }
-
-    &.md-btn--flat:hover {
-        color: $otosense-cyan;
-    }
-}
-
-.field-block {
-    margin-top: $toolbar-margin;
-
-    &.search-on {
-        margin-top: $toolbar-margin + $search-bar-margin;
-    }
-}
-
-.search-bar {
-    z-index: 2;
-    background-color: #fff;
-    margin-top: $search-bar-margin;
-
-    .search-right-icon {
-        padding-right: 15px;
-    }
-}
-
-.title-drawer {
-    .td-header {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100% !important;
-        z-index: 3;
-    }
-
-    .td-menu {
-        z-index: 3;
-    }
-}
-
-.choice-dropdown {
-    width: 100%;
-}
-
-.str-int-container {
-    padding-top: 10px;
-
-    .str-int-title {
-        &.md-text--primary {
-            color: $md-primary-color;
-        }
-    }
-
-    .str-int-box {
-        border: 1px solid $md-grey-300;
-        padding: 5px;
-
-        .str-int-row {
-            display: flex;
-            flex-direction: row;
-
-            .str-int-key {
-                flex: 3;
-                padding-right: 20px;
-            }
-
-            .str-int-val {
-                flex: 1;
-            }
-
-            .str-int-icon {
-                color: $md-grey-400;
-            }
-        }
-    }
-}
-
-.new-field-container {
-    .new-field-box {
-        border: 1px solid $md-grey-300;
-        padding: 5px;
-        margin-top: 10px;
-
-        .new-field-val {
-            .new-field-icon {
-                padding-left: 12px;
-            }
-        }
-    }
-}
-
-.info {
-    padding-bottom: 5px;
-}
-
-.messages {
-    background-color: $md-green-a-700;
-    &.error {
-        background-color: $md-deep-orange-a-700;
+.inline {
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: normal;
+    &.centered {
+        justify-content: center;
     }
 }
